<resources>
    <string name="app_name">GoodFood(client)</string>
    <string name="authorization">авторизация</string>
    <string name="login">войти</string>
    <string name="register">Регистрация</string>
    <string name="name">Имя:</string>
    <string name="gmail">Электронная почта:</string>
    <string name="password">Пароль:</string>
    <string name="welcome">Вас приветсвует</string>
    <string name="instruction">Введите свои данные для авторизации: </string>
    <string name="password1">Придумайте пароль:</string>
    <string name="password2">Повторите пароль:</string>
    <string name="GoodFood">"Good Food"</string>
    <string name="instruction2">*Для входа в приложение нажмите на кнопку "Войти".</string>
    <string name="instruction3">*Если вы впервые используете наше приложение, нажмите на кнопку "Регистрация".</string>
    <string name="instruction4">*Для регистрации введите свои личные данные:</string>
    <string name="configuration">*Для подтверждения электронной почты нажмите на кнопку "Подтвердить" </string>
    <string name="configurationBtn">Подтвердить</string>
    <string name="configurationGmail">*После смс-подтверждения вашей электроной почты , нажмите на кнопку "Автроризация" в левом верхнем углу.</string>
    <string name="Home">Главная</string>
    <string name="Profile">Профиль</string>
    <string name="location">Локация</string>
    <string name="Search">Поиск</string>
    <string name="Change">Сменить аккаунт</string>
    <string name="API_KEY">AIzaSyA4oCJQpq4dNS09qQLWh86qUMuQ9TzsJis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telephone">Введите номер телефона</string>
    <string name="inst"> Нажав на кнопку Локации, вы найдете адреса кафе, ресторанов, а также подберете маршрут к ним.</string>
    <string name="quantity">Укажите количество людей:</string>
    <string name="date">Укажите дату бронирования:</string>
    <string name="time">Укажите время:</string>
    <string name="order">Хотите сделать заказ заранее?</string>
    <string name="orderET">Хотите сделать заказ заранее?</string>
    <string name="food">Напишите какое блюдо и сколько порций. Например: Паста Феттучини 1порция, свежевыжатый сок 1 стакан.</string>
    <string name="payment">Оплатите заказ картой</string>
</resources>