<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AuthorizationClientFragment"
    android:orientation="vertical"
    android:background="@color/black"
   >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction4"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/authorization"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/appetite_italic"
            android:text="@string/authorization"
            android:textColor="#F6F2F2"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:backgroundTint="#070707"
            android:fontFamily="@font/appetite_italic"
            android:text="@string/register"
            android:textColor="#F6F2F2"
            app:cornerRadius="20dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_marginTop="100dp"
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:fontFamily="@font/appetite_italic"

        android:gravity="center"
        android:textColor="#F8F8F3" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GoodFood"
        android:textSize="30sp"
        android:fontFamily="@font/appetite_italic"
        android:gravity="center"
        android:textColor="#F8F8F3" />
    <com.google.android.material.textview.MaterialTextView
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
        android:layout_marginTop="6sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="10dp"
        android:textColor="#F8F8F6"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gmail"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gmailED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/appetite_italic"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:inputType="textPassword"
            android:fontFamily="@font/appetite_italic"
          android:textColorHint="@color/white"
            android:drawableStart="@drawable/password"
            android:drawablePadding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/appetite_italic"
        android:text="@string/login"
        android:textColor="#F6F2F2"
        app:cornerRadius="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_margin="10dp"/>
    <com.google.android.material.textview.MaterialTextView
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
        android:layout_marginTop="1sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction3"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="10dp"
        android:textColor="#DDDDDD"/>





</LinearLayout>