<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegistrationFragment"
    android:background="@drawable/back4">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction4"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/authorization"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/appetite_italic"
            android:text="@string/authorization"
            android:textColor="#F6F2F2"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:backgroundTint="#070707"
            android:fontFamily="@font/appetite_italic"
            android:text="@string/register"
            android:textColor="#F6F2F2"
            app:cornerRadius="20dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons"
        app:layout_constraintBottom_toTopOf="@+id/gmail"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/appetite_italic"
            android:drawableStart="@drawable/name"
            android:drawablePadding="12dp"
            android:ems="10"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gmail"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toTopOf="@+id/password1"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mailR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/appetite_italic"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password1"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/gmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/appetite_italic"
            android:textColorHint="@color/white"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/password1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/appetite_italic"
            android:textColorHint="@color/white"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/instruction4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction4"
        android:fontFamily="@font/appetite_italic"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/name"
        android:layout_marginStart="10dp"
       />
    <TextView
        android:id="@+id/configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/telephone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/configuration"
        android:fontFamily="@font/appetite_italic"
        android:textColor="#FFFFFF"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
       />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/configurationBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#070707"
        android:fontFamily="@font/appetite_italic"
        android:text="@string/configurationBtn"
        android:textColor="#F6F2F2"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configuration" />

    <TextView
        android:id="@+id/configurationGmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/appetite_italic"
        android:text="@string/configurationGmail"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configurationBtn"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="15dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telephone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/telephone"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="12dp"
            android:fontFamily="@font/appetite_italic"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>